--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,4 +2,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: linear-gradient(45deg, #c4baff, #b496ff);
 }
