--- a/src/Info.css
+++ b/src/Info.css
@@ -1,3 +1,52 @@
 .Info {
-  background-image: linear-gradient(to bottom, #5b3bff, #0e1ba3);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-around; */
+  color: white;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.main h1 {
+  font-size: 3rem;
+  font-weight: 300;
+}
+
+.main h1 span {
+  font-size: 2.5rem;
+}
+
+.main h3 {
+  font-size: 2rem;
+}
+
+.weatherImg {
+  width: 8rem;
+  height: 8rem;
+}
+
+.extraInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+}
+.extraInfo img {
+  width: 40px;
+  height: 40px;
+}
+
+.infoItem {
+  text-align: center;
+  flex: 1;
+  display: inline;
 }
